argocd/base/app-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
        - name: app
          image: registry.uniproject.jp/infra/event-manager:0.1.7
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 3000
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            periodSeconds: 30
            failureThreshold: 5
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            periodSeconds: 30
            failureThreshold: 5
          startupProbe:
            httpGet:
              path: /
              port: 3000
            failureThreshold: 30
            periodSeconds: 20
          resources:
            requests:
              cpu: 500m # 必要最低限の0.5CPUを確保
              memory: 1Gi # 必要最低限の1GiBを確保
            limits:
              cpu: 1000m # 最大1CPUまで使用可能
              memory: 2Gi # 最大2GiBまで使用可能
      imagePullSecrets:
        - name: internal-harbor
---
apiVersion: v1
kind: Service
metadata:
  name: app
spec:
  selector:
    app: app
  ports:
    - name: http
      port: 80
      targetPort: 3000
  type: ClusterIP
