argocd/base/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: event-manager-route
spec:
  parentRefs:
    - name: uniproject-jp-gateway
      namespace: infra-gateway
      sectionName: https-wildcard
  hostnames:
    - "event.uniproject.jp"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: app
          port: 80
      # sitcky.cookie
      sessionPersistence:
        sessionName: cookie
        type: Cookie
